# chessCplusplus

./: .gitignore  CMakeLists.txt  README.md
header/: Bishop.hpp  Board.hpp  Coord.hpp  Draw.hpp  Game.hpp  Human.hpp  Idiot.hpp  King.hpp  Knight.hpp  Pawn.hpp  PawnUpgradeCommand.hpp  Piece.hpp  Player.hpp  Queen.hpp  Rook.hpp  Timer.hpp  command.hpp  csvstrat.hpp  global.h  jsonstrat.hpp  savestrategy.hpp
src/: Bishop.cpp  Board.cpp  Board.hpp  Board_test.hpp  Board_visual_test.cpp  Command.cpp  Coord.cpp  Coord.hpp  Coord_test.hpp  Draw.cpp  Game.cpp  Human.cpp  Idiot.cpp  King.cpp  Knight.cpp  Pawn.cpp  PawnUpgradeCommand.cpp  Pawn_Visual_Tester.cpp  Piece.cpp  Piece.hpp  Queen.cpp  Rook.cpp  Timer.cpp  command.hpp  csvstrat.hpp  main.cpp  savestrategy.hpp  test.cpp
src/visual_tests/: Board_visual_test.cpp  Human_Visual_Tester.cpp  Pawn_Visual_Tester.cpp  Timer_visual_test.cpp
tests/: BishopTests.hpp  Board_test.hpp  CoordTests.hpp  Coord_test.hpp  Game_test.hpp  Human_test.hpp  KingTests.hpp  KnightTests.hpp  PawnTests.hpp  PawnUpgradeCommandTest.hpp  PieceTests.hpp  QueenTests.hpp  RookTests.hpp  SaveTests.hpp  Timer_test.hpp  test.cpp  tests.cpp
